--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -48,6 +48,8 @@
 body {
 	font-family: Muli, sans-serif;
 	font-size: 16px;
+	letter-spacing: -0.02em;
+	line-height: 40px;
 }
 
 .header {
@@ -57,7 +59,7 @@ body {
 .container {
 	min-height: 100vh;
 	max-width: 1725px;
-	margin: 0 auto;
+	margin: 0 auto 100px;
 }
 
 .header__top {
@@ -81,7 +83,6 @@ body {
 }
 
 .menu__link {
-	line-height: 40px;
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 0.02em;
@@ -93,7 +94,6 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
-
 	margin-left: 135px;
 }
 
@@ -119,7 +119,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	font-size: 10px;
-	line-height: 40px;
 	font-weight: 400;
 	text-transform: uppercase;
 	letter-spacing: 0.02em;
@@ -181,7 +180,6 @@ body {
 .header__btn {
 	position: relative;
 	display: flex;
-
 	align-items: center;
 	height: 70px;
 	padding: 0 125px 0 40px;
@@ -193,8 +191,6 @@ body {
 	-o-border-radius: 35px;
 	font-weight: 800;
 	font-size: 24px;
-	line-height: 40px;
-	letter-spacing: -0.02em;
 	color: #fff;
 	text-transform: capitalize;
 }
@@ -214,14 +210,113 @@ body {
 }
 
 .header__title {
-	font-weight: 800;
-	font-size: 50px;
-	line-height: 40px;
 	text-transform: uppercase;
-	letter-spacing: -0.02em;
 	color: #fff;
 }
 
 .title {
-	margin: 20px;
+	font-weight: 800;
+	font-size: 50px;
 }
+
+/* header */
+
+/* smoothies */
+
+.smoothies {
+}
+
+.smoothies__container {
+	max-width: 1010px;
+	margin: 0 auto 100px;
+}
+
+.smoothies__wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 60px;
+}
+
+.smoothies__title {
+	color: #f7ae3b;
+	margin-bottom: 45px;
+}
+
+.smoothies__text {
+	max-width: 915px;
+	text-align: center;
+	font-size: 18px;
+	line-height: 35px;
+	color: #1e1e1e;
+}
+
+.smoothies__cards {
+}
+
+.cards {
+}
+
+.cards__item {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.cards__icon {
+}
+
+.cards__desc {
+	font-size: 25px;
+	font-weight: 800;
+	color: #f2612d;
+}
+
+/* .smoothies {
+}
+
+.smoothies__container {
+	max-width: 1000px;
+	margin: 0 auto 100px;
+}
+.smoothies__wrapper {
+	margin-bottom: 60px;
+}
+.smoothies__title {
+	text-align: center;
+	color: #f7ae3b;
+	margin-bottom: 45px;
+}
+.smoothies__text {
+	font-size: 18px;
+	line-height: 35px;
+	text-align: center;
+	color: #1e1e1e;
+}
+
+.smoothies__cards {
+	max-width: 1010px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	grid-column-gap: 260px;
+	grid-row-gap: 180px;
+}
+
+.cards {
+}
+
+.cards__item {
+}
+
+.cards__icon {
+}
+
+.cards__desc {
+	font-size: 25px;
+	line-height: 40px;
+	font-weight: 800;
+	letter-spacing: -0.02em;
+	color: #f2612d;
+} */
