--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -26,10 +26,22 @@ body {
   margin: 0;
 }
 
-ul {
+ul,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
 }
 
 /**
