--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -335,6 +335,7 @@ body {
 
 .about__list {
 	list-style-image: url(../images/li.png);
+	margin-bottom: 30px;
 }
 
 .about__item {
@@ -361,8 +362,8 @@ body {
 	width: 382px;
 	height: 63px;
 	background-color: transparent;
-	border: 2px solid #f8b231;
-	padding: 0 99px 0 30px;
+
+	padding: 0 99px 0 22px;
 	border-radius: 30px;
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
@@ -373,12 +374,13 @@ body {
 .about__btn::before {
 	content: "";
 	position: absolute;
-	top: 27px;
-	left: 210px;
+	top: 25px;
+	left: 305px;
 	width: 30px;
 	height: 16px;
 	background-image: url("../images/arrow.png");
 }
 
 .btn--border-orange {
+	border: 2px solid #f8b231;
 }
